<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Dashboard">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!-- wrapper for profile -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/wrapperProfile"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/dashboardGreetings"
        android:textSize="20sp"
        android:fontFamily="@font/open_sans_bold"/>
    <!--options available -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:contentDescription="@string/logout"
            android:src="@drawable/ic_logout"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"/>

<!--        <ImageButton-->
<!--            android:id="@+id/btnNotification"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="end"-->
<!--            android:background="@android:color/transparent"-->
<!--            android:contentDescription="@string/profile"-->
<!--            android:src="@drawable/ic_notification"-->
<!--            android:layout_marginRight="12dp"-->
<!--            android:layout_marginBottom="12dp"/>-->

        <ImageButton
            android:id="@+id/btnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profile"
            android:src="@drawable/ic_profile"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"/>
    </LinearLayout>

</LinearLayout>

    <!-- Dashboard Options -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wrapperProfile"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/services_available"
        android:textStyle="bold" />

    <GridLayout
        android:id="@+id/dashboardOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_below="@id/wrapperProfile"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        >

        <!-- Group Loan Services -->
        <Button
            android:id="@+id/btnLoanServices"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#0CC133"
            android:fontFamily="@font/open_sans"
            android:text="Loan Services" />

        <!-- Community COntributions -->
        <Button
            android:id="@+id/btnCommunityEngagement"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#0CC133"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/open_sans"
            android:text="Community contributions" />

        <!-- Agricultural Products -->
        <Button
            android:id="@+id/btnAgricProducts"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#0CC133"
            android:fontFamily="@font/open_sans"
            android:text="Agricultural Products" />

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/strArticles"
        android:layout_below="@+id/dashboardOptions"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/articles" />

        <!-- RecyclerView for latest articles -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewArticles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/strArticles"
            android:padding="8dp"
            android:layout_marginBottom="16dp"/>

</RelativeLayout>
</ScrollView>
